# vargate-telemetry

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSING-FAQ.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: LICENSE_HEADER.txt
.github/workflows/: license-check.yml
docs/adr/: ADR-002-licensing.md
docs/architecture/: postgres-rls.md
docs/legal/: ip-assignment.md  trademark.md
docs/ops/: access-control.md  cache-efficiency.md  content-deletion.md  content-export.md  content-redaction.md  demo-seed.md
docs/perf/: hsm-envelope-bench.md
docs/sprints/: T1-completion-notes.md  T2-completion-notes.md  T3-completion-notes.md  T4-completion-notes.md  (+2 more)
mcp_server/: config.py  main.py
openapi/: README.md  ogma-api.yaml
scripts/: backfill_admin_usage_breakdown.py  bench_hsm_envelope.py  generate_bridge_jwt_keypair.py  init_telemetry_kek.py  seed_demo.py  seed_demo_openai.py  smoke_t3_real_pull.py  smoke_t4_onboarding.py  validate_openapi.py
tests/: _vcr_config.py  conftest.py  test_anthropic_admin.py  test_anthropic_client.py  test_anthropic_compliance.py  test_anthropic_factory.py  test_auth_mcp_bridge.py  test_auth_sso.py  test_backfill_admin.py  test_bridge_jwk_fetch.py  test_bridge_keys.py  test_budget_period.py  test_budget_spend.py  test_budgets_api.py  test_card_activity_categorization.py  test_card_anomaly_detection.py  test_card_cache_efficiency.py  test_card_cost_forecasting.py  test_card_model_mix.py  test_card_workspace_attribution.py  test_classify_topics_task.py  test_compliance_key_onboarding.py  test_content_capability_gate.py  test_content_deletion.py  test_content_export.py  test_content_export_pdf.py  test_content_redaction.py  test_content_view.py  test_evaluate_budgets.py  test_forecast_alert_firing.py  test_insights_endpoint.py  test_insights_forecast.py  test_mcp_authorize_callback.py  test_mcp_capability.py  test_mcp_log_interaction.py  test_mcp_oauth.py  test_mcp_oauth_sso_bridge.py  test_mcp_persist_event.py  test_mcp_token_verifier.py  test_me_capabilities.py  (+46 more)
ui/: README.md  package-lock.json  package.json  tsconfig.json
vargate_telemetry/: __init__.py  celery_app.py  chain.py  content_deletion.py  content_export.py  db.py  demo_seed.py  metering.py  onboarding.py  pii_detector.py
(+194 files in other folders)
